# onPrem-

./: .gitignore  README.md  config.toml  pyproject.toml  start.bat  start.ps1
edgecopy/: alerter.py  config.py  main.py  order_engine.py  reconciler.py  signal_processor.py  watcher.py
shared/: features.py  journal.py  models.py  polymarket_client.py  types.py
terminal/: index.html  package.json  tailwind.config.js  vite.config.ts
terminal/backend/: check_output.txt  check_supabase.py  main.py  supabase_migration.sql
terminal/src/: App.tsx  index.css  types.ts
terminal/src/components/: Chart.tsx  Layout.tsx  MarketNav.tsx  OrderBook.tsx  OrderPanel.tsx  PolyPriceChart.tsx  PositionMonitor.tsx  ProbChart.tsx  SettlementsPage.tsx  SignalPanel.tsx  TradeJournal.tsx
terminal/src/hooks/: useWebSocket.ts
terminal/src/store/: index.ts
tests/: test_features.py  test_risk_gate.py
